force-app/main/default/objects/Sub_Market__c/Sub_Market__c.object-meta.xml
<CustomObject>
    <label>Sub Market</label>
    <nameField>
        <label>Sub Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>