force-app/main/default/objects/Sub_Market__c/fields/Access_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Access_Contact_Email__c</fullName>
    <label>Access Contact Email</label>
    <type>Email</type>
</CustomField>