force-app/main/default/objects/Sub_Market__c/fields/Acquisition_Market__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Market__c</fullName>
    <label>Acquisition Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>