force-app/main/default/objects/Sub_Market__c/fields/Application_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Application_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Markets7</relationshipName>
    <type>Lookup</type>
</CustomField>