force-app/main/default/objects/Sub_Market__c/fields/Application_Manager__c.field-meta.xml
<CustomField>
    <fullName>Application_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Markets8</relationshipName>
    <type>Lookup</type>
</CustomField>