force-app/main/default/objects/Sub_Market__c/fields/Executive__c.field-meta.xml
<CustomField>
    <fullName>Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SubMarket_Executive</relationshipName>
    <type>Lookup</type>
</CustomField>