force-app/main/default/objects/Sub_Market__c/fields/HH_Leasing_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>HH_Leasing_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leasing Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Markets1</relationshipName>
    <type>Lookup</type>
</CustomField>