force-app/main/default/objects/Sub_Market__c/fields/Lead_Creation_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lead Creation Allowed?</label>
    <type>Checkbox</type>
</CustomField>