force-app/main/default/objects/Sub_Market__c/fields/Leasing_Email__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Email__c</fullName>
    <label>Leasing Email</label>
    <type>Email</type>
</CustomField>