force-app/main/default/objects/Sub_Market__c/fields/Move_in_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Move_in_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Move-in Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_MarketsepJF</relationshipName>
    <type>Lookup</type>
</CustomField>