force-app/main/default/objects/Sub_Market__c/fields/Repair_Director__c.field-meta.xml
<CustomField>
    <fullName>Repair_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SubMarket_RepairDirector</relationshipName>
    <type>Lookup</type>
</CustomField>