force-app/main/default/objects/Sub_Market__c/fields/Resident_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Resident_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resident Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Marketsepcl</relationshipName>
    <type>Lookup</type>
</CustomField>