force-app/main/default/objects/Sub_Market__c/fields/Resident_Leasing_Email__c.field-meta.xml
<CustomField>
    <fullName>Resident_Leasing_Email__c</fullName>
    <label>Resident Leasing Email</label>
    <type>Email</type>
</CustomField>