force-app/main/default/objects/Sub_Market__c/fields/SRTM_Manager__c.field-meta.xml
<CustomField>
    <fullName>SRTM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SRTM Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Markets5</relationshipName>
    <type>Lookup</type>
</CustomField>