force-app/main/default/objects/Sub_Market__c/fields/Turn_Manager__c.field-meta.xml
<CustomField>
    <fullName>Turn_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Turn Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Markets3</relationshipName>
    <type>Lookup</type>
</CustomField>