force-app/main/default/objects/Sub_Market__c/fields/Turn_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Turn_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Turn Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Markets4</relationshipName>
    <type>Lookup</type>
</CustomField>