force-app/main/default/objects/Sub_Market__c/fields/Utility_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Utility_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Markets9</relationshipName>
    <type>Lookup</type>
</CustomField>